# rust-book-course

./: .dockerignore  .gitignore  .vercelignore  DEPLOY-VERCEL.md  Dockerfile  Dockerfile.lsp  README.md  docker-compose.yml
chapters/: Cargo.toml
chapters/ch01_getting_started/: Cargo.toml  README.md  SOLUTION.md
chapters/ch02_guessing_game/: .exercise.rs  Cargo.toml  README.md  SOLUTION.md
chapters/ch03_common_concepts/: .exercise.rs  Cargo.toml  README.md  SOLUTION.md
chapters/ch04_ownership/: Cargo.toml  README.md  SOLUTION.md
chapters/ch05_structs/: .exercise.rs  Cargo.toml  README.md  SOLUTION.md
chapters/ch06_enums_pattern_matching/: .exercise.rs  Cargo.toml  README.md  SOLUTION.md
chapters/ch07_packages_crates_modules/: .exercise.rs  Cargo.toml  README.md  SOLUTION.md
chapters/ch08_collections/: .exercise.rs  Cargo.toml  README.md  SOLUTION.md
chapters/ch09_error_handling/: Cargo.toml  README.md  SOLUTION.md
chapters/ch10_generics_traits_lifetimes/: Cargo.toml  README.md  SOLUTION.md
chapters/ch11_testing/: .exercise.rs  Cargo.toml  README.md  SOLUTION.md
chapters/ch12_io_project/: .exercise.rs  Cargo.toml  README.md  SOLUTION.md
chapters/ch13_iterators_closures/: Cargo.toml  README.md  SOLUTION.md
chapters/ch14_cargo_crates_io/: Cargo.toml  README.md  SOLUTION.md
chapters/ch15_smart_pointers/: .exercise.rs  Cargo.toml  README.md  SOLUTION.md
chapters/ch16_concurrency/: Cargo.toml  README.md  SOLUTION.md
chapters/ch17_async/: .exercise.rs  Cargo.toml  README.md  SOLUTION.md
chapters/ch18_oop/: .exercise.rs  Cargo.toml  README.md  (+1 more)
(+175 files in other folders)
